# highlight-vietnam-entity-name

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-app.yml
scripts/: build_app.py
src/pdf_entity_highlighter/: __init__.py  __main__.py  batch.py  cli.py  gui.py  highlighter.py  ner.py  ocr.py  validation.py
tests/: test_batch.py  test_cli.py  test_highlighter.py  test_ner.py  test_ocr.py  test_validation.py
