[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-entity-highlighter"
version = "0.4.0"
description = "Automatically highlight Vietnamese named entities in searchable or scanned PDF files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = [
    "PyMuPDF>=1.24.0",
    "py_vncorenlp>=0.1.4",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.7.0",
]
build = [
    "pyinstaller>=6.10.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
pdf-entity-highlight = "pdf_entity_highlighter.cli:main"
pdf-entity-highlighter-gui = "pdf_entity_highlighter.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
